# celery-captures-finished-poc

./: .gitignore  README.md  celery_app.py  consume_results.py  exceptions.py  models.py  pyproject.toml  send_tasks.py
chords/: celery_app.py  send_tasks.py
outbox/: celery_app.py  send_tasks.py
