[tool.poetry]
name = "celery-captures-finished-poc"
version = "0.1.0"
description = ""
authors = ["Marcelo Canaparro <marcelocanaparro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.6.2"
redis = "^7.1.0"
pika = ">=1.3.0"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
